Purple: tumor-only made use BAF fit if highly diploid and high purity if BAF within specified limits